# lidarSLAM

./: .gitignore  README.md
0_cpp/: CMakeLists.txt  README.md  TODO.md  icp_checker.cpp  icp_config_kubelka.yaml  icp_config_mendes.yaml  kitti_pcd.cpp  main.cpp  pcl_visual.cpp
0_cpp/Velodyne/: README.md  startRecordVLP.sh  stopRecordVLP.sh  vlp.rviz
0_cpp/catkin_ws/: README.md
0_cpp/catkin_ws/src/Lidar-LOAM/include/lidar_loam/: math_utils.h
0_cpp/catkin_ws/src/Lidar-LOAM/launch/: run.launch  test.rviz
0_cpp/catkin_ws/src/Lidar-LOAM/src/: LidarOdometry.cpp  LidarPreprocessing.cpp
0_cpp/catkin_ws/src/lidar_directional_slam/config/: filter_second.yaml  icp_map.yaml  icp_odom.yaml  icp_second.yaml  icp_third.yaml  parameters.yaml  postfilter.yaml
0_cpp/catkin_ws/src/lidar_directional_slam/include/lidar_directional_slam/: lidarodometry.h  lidarslam.h
0_cpp/catkin_ws/src/lidar_directional_slam/include/lidar_directional_slam/utils/: PointMap.cpp  VoxelIntegrator.cpp  approx_hash_array.h  basic.h  block.h  integrator_utils.h  layer.h  mapping_utils.h  parameter_utils.h  pose_graph.h  pyramid_utils.h  voxel_block_hash.h  voxel_grid_map.h  voxel_integrator.h
0_cpp/catkin_ws/src/lidar_directional_slam/launch/: odometry.launch
0_cpp/catkin_ws/src/lidar_directional_slam/msg/: Edge.msg
0_cpp/catkin_ws/src/lidar_directional_slam/src/: LidarMapping.cpp  LidarOdometry.cpp
1_python/: README.md  kitti2bag.py  odom2bag.py
2_matlab/: convert_gt.m  trajectory_mapping.m  velodyne_frame_plot.m
src/: init.sh
src/Lidar-LOAM/: CMakeLists.txt  package.xml
src/Lidar-LOAM/include/lidar_loam/: MinDistProblem.h  lidarfactor.h  timer.h  utils.h
src/Lidar-LOAM/launch/: config.yaml
src/Lidar-LOAM/src/: LidarMapping.cpp  MinDistProblem.cpp
src/lidar_directional_slam/: CMakeLists.txt  package.xml
src/lidar_directional_slam/config/: filter_first.yaml  filter_third.yaml  icp_first.yaml  input_filter.yaml  prefilter.yaml
src/lidar_directional_slam/include/lidar_directional_slam/: lidarmapping.h
src/lidar_directional_slam/include/lidar_directional_slam/utils/: geometry_utils.h  point_map.h  voxel.h
src/lidar_directional_slam/launch/: mapping.launch
src/lidar_directional_slam/msg/: Node.msg  PoseGraph.msg
src/lidar_directional_slam/rviz/: mapping.rviz  traj_visual.rviz  velo_visual.rviz
